--- a/preamble.tex
+++ b/preamble.tex
@@ -1,5 +1,6 @@
 \usepackage{booktabs}
 \usepackage{amsthm}
+\usepackage{amsmath,amssymb,amsfonts}
 \usepackage{graphicx}
 \usepackage{tikz}
 \usepackage{chemfig}
