--- a/02-mod02.Rmd
+++ b/02-mod02.Rmd
@@ -1821,7 +1821,7 @@ Although the final conversion (_X_) will be higher for an isothermal mode than f
 
 For this reason, it is necessary to determine the optimal temperature progression along the reactor to maximize the conversion for the minimum possible reactor volume, which is shown as a dashed line in figure \@ref(fig:fig003014).
 
-```{r fig003014, out.width="55%", echo=FALSE, fig.align='center', fig.cap='Typical lines of constant reaction rate corresponding to set of values of \\temperature and conversion for an exothermic reaction', fig.lp='fig:'}
+```{r fig003014, out.width="55%", echo=FALSE, fig.align='center', fig.cap='Typical lines of constant reaction rate corresponding to set of values of temperature and conversion for an exothermic reaction', fig.lp='fig:'}
 library(png)
 library(grid)
 img <- readPNG("figures/003_draw_002.png")
@@ -1843,15 +1843,15 @@ The temperature at which the conversion rate is a maximum will be somewhat lower
 Derive an equation for the locus of maximum reaction rates for a simple reversible-exothermic reaction 
 
 \[
-A \xrightarrow[\substack{k_2}]{\substack{k_1}} B
+A \xrightarrow[k_2]{k_1} B
 \]
 
 Assuming $C_{B0} = 0$, $r_{1} = k_{1}\,C_A$, $r_{2} = k_{2}\,C_B$, and
 \begin{align*}
-	k_1 &= k_{10} \exp\left(-E1/RT\right)\\
-	k_2 &= k_{20} \exp\left(-E2/RT\right)
+	k_1 &= k_{10} \exp\left(-Ea_1/RT\right)\\
+	k_2 &= k_{20} \exp\left(-Ea_2/RT\right)
 \end{align*}
-with $E2>E1$
+with $Ea_2>Ea_1$
 ```
 
 ```{solution}
@@ -1860,8 +1860,127 @@ The corresponding maximum reaction rate can be derived as a function of temperat
 r_\text{opt}(T) = \cfrac{Cao\:k_{10}\:k_{20} \left(- Ea_{1} + Ea_{2}\right)}{Ea_{1}\: k_{10}\: e^{\cfrac{Ea_{2}}{R T}} + Ea_{2}\: k_{20}\: e^{\cfrac{Ea_{1}}{R T}}}
 \end{equation*}
 
-More details about this solution could be found on [Python](https://github.com/aliglara/ebook_che5314_ucv/blob/main/codes/lect_013ThermoMaxExothemica)
+More details about the solution of this problen is available on this link [Python](https://github.com/aliglara/ebook_che5314_ucv/blob/main/codes/lect_013ThermoMaxExothemica.ipynb)
 ```
+
+```{exercise, it003010, name="Calculation of the optimal temperature"}
+Derive an equation for the optimal temperature for a simple reversible-exothermic reaction 
+\begin{equation*}
+		A + B \rightleftharpoons P + Q
+\end{equation*}
+
+\begin{align*}
+r_{1} &= k_{1}\,C_A\,C_B, \qquad k_1 = k_{10} \exp\left(-E_1/RT\right) \quad \text{forward reaction}\\
+r_{2} &= k_{2}\,C_P\,C_Q, \qquad	k_2 = k_{20} \exp\left(-E_2/RT\right) \quad \text{reverse reaction}
+\end{align*}
+with $E2>E1$
+```
+
+```{solution}
+Following the same procedure shown in the last illustration, the optimal temperature is 
+\begin{equation}
+	T_{\text{opt}} = \cfrac{E_1 - E_2}{\ln\left(\cfrac{k_{10}\,E_1\,C_A\,C_B}{k_{20}\,E_2\,C_P\,C_Q}\right)\,R}
+	(\#eq:ec003052)
+\end{equation}
+
+The system will reach the chemical equilibrium at $r = 0$ and
+\begin{equation}
+K = \frac{C_P\,C_Q}{C_A\,C_B} = \frac{k_{10} \exp\left(-E_1/RT\right)}{k_{20} \exp\left(-E_2/RT\right)}
+(\#eq:ec003053)
+\end{equation}
+
+Substituting Eq. \@ref(eq:ec003053) into \@ref(eq:ec003052)
+\begin{equation}
+\frac{T_\text{opt}}{T_\text{e}} = \cfrac{E_1-E_2}{-E_2+E_1-\ln\left(\cfrac{E_2}{E_1}\right)\,R\,T_\text{e}}
+(\#eq:ec003054)
+\end{equation}
+
+When the difference between the absolute temperature $T_\text{e}$ and $T_\text{opt}$ is relatively small, \@ref(eq:ec003054) may be approximated by
+\begin{equation}
+\frac{T_\text{e}-T_\text{opt}}{T_\text{e}} \approx \frac{R\,T_\text{e}}{-\Delta H_R}\ln\left(\frac{E_2}{E_1}\right)
+(\#eq:ec003055)
+\end{equation} 
+  
+More details about the solution of this problen is available on this link [Python](https://github.com/aliglara/ebook_che5314_ucv/blob/main/codes/lect_014raMaxExothemica.ipynb)
+```
+
+In practice, it may be challenging to achieve an optimal temperature profile within a reactor. Therefore other designs are often used. 
+
+1. For relatively fast reactions that are equilibrium limited, the adiabatic reactor is commonly used in the industry.
+2. Where very high conversions are desired, it is common to use multiple reactors in series, with cooling between each reactor.
+
+Figure \@ref(fig:fig003015) shows a typical conversion path for multiple adiabatic reactors in series. Each diagonal line represents one reactor, which operates adiabatically until the fixed conversion is reached. 
+For example, $X_1$ then the process stream is cooled by passing it through a heat exchanger until a predetermined temperature (in this stage, there is no conversion). Afterward, the process stream enters the next reactor (Bed 2) and so on.
+
+```{r fig003015, out.width="55%", echo=FALSE, fig.align='center', fig.cap='Typical conversion path for multiple adiabatic reactors in series for exothermic reactions', fig.lp='fig:'}
+library(png)
+library(grid)
+img <- readPNG("figures/003_draw_003.png")
+grid.raster(img)
+```
+
+In designing reactor systems with interstage cooling, one crucial question that must be addressed is how the reactor stages should be sized. Should all the temperature differences between inlet and outlet be equal? Or is there some optimum distribution of $\Delta T$'s? The latter would imply an optimum in the number of reactor stages and (in the case of catalytic reactions) an optimum distribution of mass of catalyst between the reactor stages.
+
+In the end, the exact number of the reactor and the degree of cooling between them depends on the reaction involved and operating and capital costs. 
+However, it is clear that the system is very complex, and the optimum to be arrived at would depend on the type of objective function(s) that are adopted.
+
+When dealing with a series of PFR, the application of Fig. Y is quite tricky. However, the optimum temperature profile can be found based on the assumption that the criterion Eq. Z and hence also equation Eq. W must be valid for any cross-section of the reactor.
+
+The volume of a PFR is proportional to the integral
+\begin{equation}
+\int_0^{X_{A,L}} \frac{dX_A}{r_A}
+(\#eq:ec003056)
+\end{equation}
+
+From the optimum temperature policy, this integral should be a minimum which leads to the condition
+\begin{equation}
+\int_0^{X_{A,L}} \frac{\partial r_A}{\partial T}\,\frac{dX_A}{r_A^2}=0
+(\#eq:ec003057)
+\end{equation}
+
+In order to the highest possible final conversion for a given number of sections based on a given entrance temperature of the first section, the conditions must be met:
+For each section, $N$ equation X becomes to
+\begin{equation}
+\int_{{X_{A,0}}}^{X_{A,L}} \frac{\partial r_A}{\partial T}\,\frac{dX_{A,N}}{r_A^2}=0
+(\#eq:ec003058)
+\end{equation}
+where $X_{A,N}$ and $T$ are related by
+
+\begin{equation}
+    T_N = T_{N,0} = \Delta T_\text{ad} \left(X_{A,N}-X_{A,0}\right), \quad \Delta T_\text{ad} = \frac{-\Delta H_R \,C_{A0}}{\rho C_P}
+(\#eq:ec003059)
+\end{equation}
+
+Between two sections ($N-1$) and $N$
+\begin{align}
+R_{A(N-1),L} &= R_{AN,0} \\
+X_{A(N-1),L} &= X_{AN,0}
+(\#eq:ec003060)
+\end{align}
+
+The procedure will be illustrated using a temperature conversion diagram of a given exothermic equilibrium reaction with a given feed composition. 
+
+```{r fig003016, out.width="55%", echo=FALSE, fig.align='center', fig.lp='fig:'}
+library(png)
+library(grid)
+img <- readPNG("figures/003_draw_004.png")
+grid.raster(img)
+```
+
+Figure contains a curve for $T_\text{e}$ (chemical equilibrium) and $T_\text{opt}$ (optimum temperature profile) at which the conversion rate is at a maximum, both for the corresponding fractional conversion. Two lines of constant conversion rate have also been drawn.
+
+The feed enters the first stage at temperature $T_{1,0}(X_{1,0}=0)$ and the reaction is heated up proportionally to $X$ following equation \@ref(eq:ec003059).
+When the $T_1-X_1$ line intersects with the curve for $T_\text{opt}$, the sign of $\partial R/\partial T$ changes from positive to negative, which occurs at $T_{1,L},X_{1,L}$ located on curve $R = R_1$ so reaction mixture must be cooled at temperature $T_{2,0}$ and then the mixture entering the second stage has te same conversion rate $R_1$, and so on until the desired number of stages has been passed.
+
+In the case that the process has a maximum of permissible temperature $T^\ast$ so that only a corresponding degree of conversion $X^\ast < X_{A1,L}$ can be reached in stage number $1$. This section then no longer has the minimum volume since Eq. \@ref(eq:ec003058) is no longer applicable.
+
+Therefore, Eq. \@ref(eq:ec003058) must be replaced by
+\begin{equation}
+\Delta T_\text{ad} \int_{0}^{X_{A1,L}^\ast} \frac{\partial r_A}{\partial T}\,\frac{dX_{A1}}{r_A^2} + \frac{1}{r_A(X^\ast)} = \frac{1}{r_{A2,0}}
+(\#eq:ec003061)
+\end{equation}
+to find the proper entrance temperature to the second section.
+
 **Work in Progress**
 
 
