--- a/05-exercises.Rmd
+++ b/05-exercises.Rmd
@@ -13,3 +13,4 @@ Exercises | Name | Solution (Python)
 \@ref(exr:it003008) |Comparing PFRs performance| [link](https://github.com/aliglara/ebook_che5314_ucv/blob/main/codes/lect_012PFRadiabatico.ipynb)
 \@ref(exr:it003009) |The locus of maximum reaction rates| [link](https://github.com/aliglara/ebook_che5314_ucv/blob/main/codes/lect_013ThermoMaxExothemica.ipynb)
 \@ref(exr:it003010) |Calculation of the optimal temperature| [link](https://github.com/aliglara/ebook_che5314_ucv/blob/main/codes/lect_014raMaxExothemica.ipynb)
+\@ref(exr:it003011) |Reversible exothermic reaction| [link](https://github.com/aliglara/ebook_che5314_ucv/blob/main/codes/lect_016CSTROptimization.ipynb)
